--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -1,11 +1,7 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
-    "rootDir": "src/",
+    "outDir": "../out-tsc/app",
     "types": []
-  },
-  "exclude": [
-    "test.ts",
-    "**/*.spec.ts"
-  ]
+  }
 }
