Small Styling changes

--- a/functions/package.json
+++ b/functions/package.json
@@ -1,17 +1,24 @@
 {
-  "name": "kev",
-  "version": "0.0.0",
+  "name": "functions",
   "scripts": {
+    "build": "tsc",
+    "serve": "npm run build && firebase serve --only functions",
+    "shell": "npm run build && firebase functions:shell",
+    "start": "npm run shell",
+    "logs": "firebase functions:log",
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "deploy": "ng build --prod && firebase deploy"
   },
-  "private": true,
+  "engines": {
+    "node": "8"
+  },
+  "main": "lib/index.js",
   "dependencies": {
+    "firebase-admin": "~7.0.0",
+    "firebase-functions": "^2.3.0",
     "@angular/animations": "~7.2.0",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
@@ -33,6 +40,7 @@
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
+    "typescript": "~3.2.2",
     "@angular-devkit/build-angular": "~0.13.0",
     "@angular/cli": "~7.3.9",
     "@angular/compiler-cli": "~7.2.0",
@@ -50,7 +58,8 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.2.2"
-  }
+    "tslint": "~5.11.0"
+  },
+  "private": true,
+  "version": "0.0.0"
 }
